apps/filebrowser/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filebrowser
  namespace: filebrowser
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    # traefik.ingress.kubernetes.io/router.middlewares: authentik-authentik-forward-auth@kubernetescrd  # disabled
spec:
  tls:
    - hosts:
        - files.liberispat.com
      secretName: liberispat-wildcard-tls
  rules:
    - host: files.liberispat.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: filebrowser
                port:
                  number: 80
